Actions
Bug #10483
closedaac: cast between incompatible function types
Start date:
2019-03-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build error with gcc 8:
../../common/io/aac/aac.c: In function 'aac_add_intrs': ../../common/io/aac/aac.c:1676:13: error: cast between incompatible function types from 'uint_t (*)(char *)' {aka 'unsigned int (*)(char *)'} to 'uint_t (*)(char *, char *)' {aka 'unsigned int (*)(char *, char *)'} [-Werror=cast-function-type] aac_intr = (ddi_intr_handler_t *)((softs->flags & AAC_FLAGS_NEW_COMM) ? ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit b4a8b33babbf9a7a5de61ea06d09e1eb537f1f6e
commit b4a8b33babbf9a7a5de61ea06d09e1eb537f1f6e Author: Toomas Soome <tsoome@me.com> Date: 2019-03-15T07:21:30.000Z 10483 aac: cast between incompatible function types Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions